fix: positioned scrollbar correctly and added custom scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+// Custom scrollbar
+::-webkit-scrollbar {
+  background-color: rgba(#999999, 0.3);
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 3px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a5;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
